@@ -70,6 +70,7 @@ v 8.11.0
   - Remove the http_parser.rb dependency by removing the tinder gem. !5758 (tbalthazar)
   - Add Koding (online IDE) integration
   - Ability to specify branches for Pivotal Tracker integration (Egor Lynko)
+  - Creating an issue through our API now emails label subscribers !5720
   - Fix don't pass a local variable called `i` to a partial. !20510 (herminiotorres)
   - Fix rename `add_users_into_project` and `projects_ids`. !20512 (herminiotorres)
   - Fix adding line comments on the initial commit to a repo !5900
